force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Total_Calculation_Cumulative__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Calculation_Cumulative__c</fullName>
    <label>Total Calculation Cumulative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>off</fullName>
                <default>true</default>
                <label>off</label>
            </value>
            <value>
                <fullName>on</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>