force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Total_Calculation_Rule__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Calculation_Rule__c</fullName>
    <description>Defines how the total column is aggregated along the x-axis</description>
    <label>Total Calculation Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Aggregation_Rule</valueSetName>
    </valueSet>
</CustomField>