force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Validation_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Validation_Error_Message__c</fullName>
    <description>Label id of the error string</description>
    <label>Validation Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>