force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Validation_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Validation_Level__c</fullName>
    <description>Determines at which level validation will be executed. Applicable only for Validation record type.</description>
    <label>Validation Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cgcloud__Scope__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>promotion</fullName>
            </value>
            <value>
                <fullName>tactic</fullName>
            </value>
            <value>
                <fullName>promotionproduct</fullName>
            </value>
            <value>
                <fullName>tacticproduct</fullName>
            </value>
            <value>
                <fullName>promotionproductgroup1</fullName>
            </value>
            <value>
                <fullName>tacticproductgroup1</fullName>
            </value>
            <value>
                <fullName>promotionproductgroup2</fullName>
            </value>
            <value>
                <fullName>tacticproductgroup2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>