force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Validation_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Validation_Value_Type__c</fullName>
    <description>Determines at which granular level the validation is executed. Applicable only for Validation record type.</description>
    <label>Validation Value Granularity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>total</fullName>
            </value>
            <value>
                <fullName>week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>