force-app/main/default/objects/cgcloud__KPI_Definition__c/fields/cgcloud__Value_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Value_Type__c</fullName>
    <description>Defines whether a percentage sign is displayed for that KPI in the VPC or not.</description>
    <label>Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Money</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>