force-app/main/default/objects/cgcloud__KPI_Definition__c/recordTypes/cgcloud__bom_component_aggregation.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__bom_component_aggregation</fullName>
    <active>true</active>
    <description>KPI type to aggregate a component-level KPI within a Bill of Materials (BOM) to the product.</description>
    <label>BOM Component Aggregation</label>
</RecordType>