force-app/main/default/objects/cgcloud__KPI_Definition__c/recordTypes/cgcloud__calculated.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__calculated</fullName>
    <active>true</active>
    <description>Calculated KPIs require a formula field to aggregate the values</description>
    <label>Calculated</label>
</RecordType>