force-app/main/default/objects/cgcloud__KPI_Definition__c/recordTypes/cgcloud__compound.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__compound</fullName>
    <active>true</active>
    <description>For Compound KPI</description>
    <label>Compound</label>
</RecordType>