force-app/main/default/objects/cgcloud__KPI_Definition__c/recordTypes/cgcloud__editable.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__editable</fullName>
    <active>true</active>
    <description>Editable KPIs gives user the possibility to edit the values</description>
    <label>Editable</label>
</RecordType>