force-app/main/default/objects/cgcloud__KPI_Definition__c/recordTypes/cgcloud__editable_calculated.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__editable_calculated</fullName>
    <active>true</active>
    <description>Editable Calculated KPI Defintion</description>
    <label>Editable Calculated</label>
</RecordType>