force-app/main/default/objects/cgcloud__KPI_Definition__c/recordTypes/cgcloud__read.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__read</fullName>
    <active>true</active>
    <description>Read KPIs read the values from the mentioned table</description>
    <label>Read</label>
</RecordType>