force-app/main/default/objects/cgcloud__KPI_Definition__c/recordTypes/cgcloud__uplift_prediction.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__uplift_prediction</fullName>
    <active>true</active>
    <description>KPI Type used to store Uplift Prediction information</description>
    <label>Uplift Prediction</label>
</RecordType>