force-app/main/default/objects/cgcloud__KPI_Definition__c/recordTypes/cgcloud__validation.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__validation</fullName>
    <active>true</active>
    <description>KPI validations will enforce business rules using the values of the KPIs and will prevent users from saving a promotion until resolved.</description>
    <label>Validation</label>
</RecordType>