force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_Aggregation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Aggregation_Rule</fullName>
    <active>true</active>
    <description>Aggregation Rule must be &apos;Sum&apos; if the Consider Sub Accounts is checked.</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(cgcloud__Aggregation_Rule__c , &quot;SUM&quot;)),
cgcloud__Data_Source_Load_For_Sub_Accounts__c = TRUE
)</errorConditionFormula>
    <errorMessage>Aggregation Rule must be &apos;Sum&apos; if the Consider Sub Accounts is checked.</errorMessage>
</ValidationRule>