force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_AggregationTimeRule_CmpdMainSet.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_AggregationTimeRule_CmpdMainSet</fullName>
    <active>true</active>
    <description>Check Aggregation Time Rule set as Formula if Kpi is Compound Main</description>
    <errorConditionFormula>AND(
      RecordType.DeveloperName = &quot;editable_calculated&quot;,
      cgcloud__Compound_Main__c = True,
      (ISPICKVAL(cgcloud__Aggregation_Time_Rule__c, &quot;formula&quot;))
      )</errorConditionFormula>
    <errorMessage>Aggregation Time Rule must be &apos;Aggregate&apos; if the Compound Main is set.</errorMessage>
</ValidationRule>