force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_BlankSpaces_Within_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_BlankSpaces_Within_Name</fullName>
    <active>true</active>
    <description>KPI Definition Name must be without spaces.</description>
    <errorConditionFormula>AND(
      NOT(ISBLANK(Name)), CONTAINS(Name, &quot; &quot;))</errorConditionFormula>
    <errorMessage>KPI Definition Name must be without spaces.</errorMessage>
</ValidationRule>