force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_BOMScope_NotComponentValCmpdKPIs.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_BOMScope_NotComponentValCmpdKPIs</fullName>
    <active>true</active>
    <description>BOM Scope cannot contain &apos;Component&apos; for Compound, Editable Calculated and Validation KPIs.</description>
    <errorConditionFormula>AND(OR(RecordType.DeveloperName = &apos;compound&apos;, RecordType.DeveloperName = &apos;validation&apos;, RecordType.DeveloperName = &apos;editable_calculated&apos;), INCLUDES(cgcloud__BoM_Scope__c, &quot;Component&quot;))</errorConditionFormula>
    <errorDisplayField>cgcloud__BoM_Scope__c</errorDisplayField>
    <errorMessage>BOM Scope cannot contain &apos;Component&apos; for Compound, Editable Calculated and Validation KPIs.</errorMessage>
</ValidationRule>