force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_BOMScope_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_BOMScope_NotEmpty</fullName>
    <active>true</active>
    <description>The BOM Scope can&apos;t be empty.</description>
    <errorConditionFormula>ISBLANK(cgcloud__BoM_Scope__c)</errorConditionFormula>
    <errorDisplayField>cgcloud__BoM_Scope__c</errorDisplayField>
    <errorMessage>Please select at least one value. BOM Scope cannot be empty.</errorMessage>
</ValidationRule>