force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_If_Data_Source_Table_Name_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Data_Source_Table_Name_NotEmpty</fullName>
    <active>true</active>
    <description>The Data Source Table Name can&apos;t be empty.</description>
    <errorConditionFormula>AND(
      $RecordType.DeveloperName = &quot;read&quot;,
      ISBLANK(cgcloud__Data_Source_Condition_Search_Group__c),
      (
      (ISPICKVAL
      (cgcloud__Data_Source_Table_Name__c, &quot;&quot;)
      )
      )
      )</errorConditionFormula>
    <errorMessage>The Data Source Table Name can&apos;t be empty.</errorMessage>
</ValidationRule>