force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_If_DataSource_MeasureCode_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_DataSource_MeasureCode_NotEmpty</fullName>
    <active>true</active>
    <description>The Read Code of Data Source can&apos;t be empty.</description>
    <errorConditionFormula>AND(
      OR($RecordType.DeveloperName = &quot;read&quot;, $RecordType.DeveloperName = &quot;uplift_prediction&quot;),
      ISBLANK(cgcloud__Data_Source_Condition_Search_Group__c),
      ISBLANK(cgcloud__Data_Source_Measure_Code__c))</errorConditionFormula>
    <errorMessage>The Read Code of Data Source can&apos;t be empty.</errorMessage>
</ValidationRule>