force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_If_Distribution_Acc_Hier_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Distribution_Acc_Hier_NotEmpty</fullName>
    <active>true</active>
    <description>Distribution Measure Code cannot be empty when Distribution Type (Customer Hierarchy) is Metric (KPI).</description>
    <errorConditionFormula>AND(
$RecordType.DeveloperName = &quot;editable&quot;,
ISBLANK(cgcloud__Distribution_Acc_Hierarchy_Metric_Code__c),
ISPICKVAL(cgcloud__Distribution_Acc_Hierarchy_Dist_Type__c, &quot;metric&quot;)
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Distribution_Acc_Hierarchy_Metric_Code__c</errorDisplayField>
    <errorMessage>Distribution Measure Code cannot be empty when Distribution Type (Customer Hierarchy) is Metric (KPI).</errorMessage>
</ValidationRule>