force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_If_Distribution_Plan_Hier_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Distribution_Plan_Hier_NotEmpty</fullName>
    <active>true</active>
    <description>Distribution (Planning Hierarchy) cannot be empty when Distribution Type (Planning Hierarchy) is Metric (KPI).</description>
    <errorConditionFormula>AND(
      OR($RecordType.DeveloperName = &quot;editable&quot;,
      $RecordType.DeveloperName = &quot;editable_calculated&quot;),

      ISBLANK(cgcloud__Distribution_Plan_Hierarchy_Dist_Metric__c),

      ISPICKVAL(cgcloud__Distribution_Plan_Hierarchy_Dist_Type__c, &quot;metric&quot;)
      )</errorConditionFormula>
    <errorDisplayField>cgcloud__Distribution_Plan_Hierarchy_Dist_Metric__c</errorDisplayField>
    <errorMessage>Distribution (Planning Hierarchy) cannot be empty when Distribution Type (Planning Hierarchy) is Metric (KPI).</errorMessage>
</ValidationRule>