force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_If_Editable_Measure_Code_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Editable_Measure_Code_NotEmpty</fullName>
    <active>true</active>
    <description>Check If Editable Measure code is not Empty</description>
    <errorConditionFormula>OR(
      AND(
      RecordType.DeveloperName = &quot;editable&quot;,
      ISBLANK(cgcloud__Editable_Measure_Code__c)),
      AND(
      RecordType.DeveloperName = &quot;editable_calculated&quot;,
      ISBLANK(cgcloud__Editable_Measure_Code__c),
      cgcloud__Compound_Main__c == TRUE)
      )</errorConditionFormula>
    <errorMessage>Editable Measure Code must not be empty for editable KPIs and for editable_calculated KPIs which are the compound main.</errorMessage>
</ValidationRule>