force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_If_Formula_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Formula_NotEmpty</fullName>
    <active>true</active>
    <description>The Formula can&apos;t be empty.</description>
    <errorConditionFormula>AND( OR(
      $RecordType.DeveloperName = &quot;calculated&quot;, $RecordType.DeveloperName = &quot;editable_calculated&quot;),
      ISBLANK(cgcloud__Formula__c))</errorConditionFormula>
    <errorMessage>The Formula can&apos;t be empty.</errorMessage>
</ValidationRule>