force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_If_KPI_Name_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_KPI_Name_NotEmpty</fullName>
    <active>true</active>
    <description>The KPI Definition Name can&apos;t be empty.</description>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorMessage>The KPI Definition Name can&apos;t be empty.</errorMessage>
</ValidationRule>