force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_If_Name_Is_Unique.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Name_Is_Unique</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
      UPPER(Name) = UPPER(VLOOKUP
      ($ObjectType.cgcloud__KPI_Definition__c.Fields.Name , $ObjectType.cgcloud__KPI_Definition__c.Fields.Name, Name )),

      not(
      Id=VLOOKUP
      ($ObjectType.cgcloud__KPI_Definition__c.Fields.Id , $ObjectType.cgcloud__KPI_Definition__c.Fields.Name, Name )))</errorConditionFormula>
    <errorMessage>KPI Definition Name already exists, please enter different Name.</errorMessage>
</ValidationRule>