force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_If_Name_Is_Valid_Pattern.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Name_Is_Valid_Pattern</fullName>
    <active>true</active>
    <description>KPI Definition Name should not contain special characters.</description>
    <errorConditionFormula>NOT(REGEX(Name, &quot;^\\w+$&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>KPI Definition Name should not contain special characters.</errorMessage>
</ValidationRule>