force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_Offset_Empty_For_PayTacticMeasure.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Offset_Empty_For_PayTacticMeasure</fullName>
    <active>true</active>
    <description>Year or week offset is not supported for the selected data source tables.</description>
    <errorConditionFormula>AND( ISPICKVAL(cgcloud__Data_Source_Table_Name__c, &quot;weeklypaymenttacticmeasureresult&quot;),
        OR(
        cgcloud__Data_Source_Week_Offset__c &lt;&gt; 0,
        cgcloud__Data_Source_Year_Offset__c &gt; 0
        ))</errorConditionFormula>
    <errorMessage>Year or week offset is not supported for the selected data source tables.</errorMessage>
</ValidationRule>