force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_PayTactic_Measure_Result_Scope.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_PayTactic_Measure_Result_Scope</fullName>
    <active>true</active>
    <description>If data source table name is weekly payment tactic measure result then the scope must be promotion tactic.</description>
    <errorConditionFormula>AND(
        ISPICKVAL(cgcloud__Data_Source_Table_Name__c, &quot;weeklypaymenttacticmeasureresult&quot;),
        NOT(ISPICKVAL(cgcloud__Scope__c, &quot;promotiontactic&quot;))
        )</errorConditionFormula>
    <errorMessage>If data source table name is weekly payment tactic measure result then the scope must be promotion tactic.</errorMessage>
</ValidationRule>