force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_Reporting_Read_Is_Writeback.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Reporting_Read_Is_Writeback</fullName>
    <active>true</active>
    <description>For reporting relevant kpi of type read, KPI must be configured as writeback.</description>
    <errorConditionFormula>AND(
      cgcloud__Reporting_Relevant__c, ISPICKVAL(cgcloud__Reporting_Type__c, &quot;read&quot;),
      cgcloud__Storage_Options_Writeback__c = FALSE
      )</errorConditionFormula>
    <errorMessage>For reporting relevant kpi of type read, KPI must be configured as writeback.</errorMessage>
</ValidationRule>