force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_Reporting_Type_For_Relevant.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Reporting_Type_For_Relevant</fullName>
    <active>true</active>
    <description>Reporting type must be set when KPI is reporting relevant.</description>
    <errorConditionFormula>AND(
      cgcloud__Reporting_Relevant__c,
      ISBLANK(TEXT(cgcloud__Reporting_Type__c)))</errorConditionFormula>
    <errorMessage>Reporting type must be set when KPI is reporting relevant.</errorMessage>
</ValidationRule>