force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_Rounding_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Rounding_Order</fullName>
    <active>true</active>
    <description>Rounding order must be enabled when type is enabled</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(TEXT(cgcloud__Rounding_Type__c))),
  ISBLANK(TEXT(cgcloud__Rounding_Order__c))
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Rounding_Order__c</errorDisplayField>
    <errorMessage>Rounding Order must be enabled when Rounding Type is enabled</errorMessage>
</ValidationRule>