force-app/main/default/objects/cgcloud__KPI_Definition__c/validationRules/cgcloud__Check_Storage_Levels_With_Bom_Scope.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Storage_Levels_With_Bom_Scope</fullName>
    <active>true</active>
    <description>Cannot select Storage Level &apos;BoM Component&apos; if the Bom Scope does not include &apos;Component&apos;.</description>
    <errorConditionFormula>AND(
  INCLUDES(cgcloud__Storage_Options_Storage_Levels__c, &apos;BomComponent&apos;),
  NOT(INCLUDES(cgcloud__BoM_Scope__c, &apos;Component&apos;))
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Storage_Options_Storage_Levels__c</errorDisplayField>
    <errorMessage>Storage Level &apos;BOM Component&apos; can be selected only if Bom Scope includes &apos;Component&apos;</errorMessage>
</ValidationRule>